[gd_scene load_steps=9 format=3 uid="uid://caxhjrabcixml"]

[ext_resource type="Script" uid="uid://cvn505ig5rux" path="res://Scripts/SettingsPanel.gd" id="1_u3k2j"]
[ext_resource type="Texture2D" uid="uid://b0cb3wppakx0o" path="res://Sprites/Backround.png" id="2_j0pa2"]
[ext_resource type="FontFile" uid="uid://vbcw0mdwlmto" path="res://Sprites/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/connection/ConnectionBold.otf" id="2_phw20"]
[ext_resource type="StyleBox" uid="uid://o085dxr80jih" path="res://Sprites/ButtonHover.tres" id="3_j0pa2"]
[ext_resource type="FontFile" uid="uid://gtv0xtpokrdi" path="res://Sprites/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/connection/Connection.otf" id="4_b3fns"]
[ext_resource type="StyleBox" uid="uid://daw4g3gjy8ck4" path="res://Sprites/Button.tres" id="4_puq62"]

[sub_resource type="LabelSettings" id="LabelSettings_j0pa2"]
font = ExtResource("2_phw20")
font_size = 60

[sub_resource type="Theme" id="Theme_puq62"]

[node name="Settingns" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -324.0
offset_right = -442.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_u3k2j")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_j0pa2")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 215.0
offset_top = 32.0
offset_right = 879.0
offset_bottom = 55.0
text = "Autdio Settings"
label_settings = SubResource("LabelSettings_j0pa2")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 128.0
offset_right = 879.0
offset_bottom = 385.0
theme_override_constants/separation = 14

[node name="VolumeValueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_puq62")

[node name="VolumeValueLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Suport "

[node name="LinkButton" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_b3fns")
theme_override_font_sizes/font_size = 46
text = "Buy me cofe"
uri = "https://buymeacoffee.com/ggamerthx"

[node name="LinkButton2" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_b3fns")
theme_override_font_sizes/font_size = 46
text = "GitHub"
uri = "https://github.com/GGamer704"

[node name="LinkButton3" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_b3fns")
theme_override_font_sizes/font_size = 46
text = "Discord"
uri = "https://discord.com/users/723479329195032608"

[node name="LinkButton4" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_b3fns")
theme_override_font_sizes/font_size = 46
text = "Email"
uri = "gammeuseonly@gmail.com"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 504.0
offset_right = 591.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("2_phw20")
theme_override_font_sizes/font_size = 34
theme_override_styles/hover = ExtResource("3_j0pa2")
theme_override_styles/pressed = ExtResource("4_puq62")
theme_override_styles/normal = ExtResource("4_puq62")
text = "Close
"

[connection signal="pressed" from="VBoxContainer/LinkButton4" to="." method="_on_link_button_4_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
